--- a/src/app/boombocs/boombocs.component.html
+++ b/src/app/boombocs/boombocs.component.html
@@ -27,7 +27,7 @@
         <figcaption>Boombocs moodboard</figcaption>
       </figure>
 
-    <section class="clearfix">
+    <section class="clearfix section">
       <header>
         <h2>Product comes first</h2>
       </header>
@@ -46,7 +46,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>The Platform</h2>
       </header>
@@ -62,7 +62,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>Applying Animations</h2>
       </header>
@@ -82,7 +82,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>The Rest</h2>
       </header>
@@ -112,7 +112,7 @@
       </p>
 
       <div class="text-center">
-        <img src="assets/images/boombocs.png" alt="Boombocs logo" data-aos="fade-up">
+        <img src="assets/images/boombocs-white.png" srcset="assets/images/boombocs-white.png 1x, assets/images/boombocs-white@2x.png 2x" alt="Boombocs logo" data-aos="fade-up">
       </div>
     </section>
 
