--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -27,7 +27,7 @@
     </ul>
 
 
-    <section>
+    <section class="section">
       <header>
         <h2>Who/What is EPOCH?</h2>
       </header>
@@ -56,7 +56,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>The System</h2>
       </header>
