--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
       <blockquote class="text-center">
-        <q>You've made it to the bottom!</q>
+        <q><span aria-hidden="true">🚀</span> You've made it to the bottom!</q>
         <footer>- Jupiter and the Giraffe</footer>
       </blockquote>
       <section>
