--- a/src/app/northstar/northstar.component.html
+++ b/src/app/northstar/northstar.component.html
@@ -11,7 +11,7 @@
       private client/tax and immigration law.
     </p>
 
-    <section>
+    <section class="section">
       <header>
         <h2>The Project</h2>
       </header>
@@ -25,7 +25,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>Designing the Site</h2>
       </header>
@@ -39,7 +39,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>A New Colour</h2>
       </header>
@@ -74,7 +74,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>Looking Again at the Logo</h2>
       </header>
@@ -86,7 +86,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>Careful Choice of Images</h2>
       </header>
