--- a/src/assets/sass/components/_card.scss
+++ b/src/assets/sass/components/_card.scss
@@ -2,5 +2,5 @@
   background: $color-white;
   border-radius: 5px;
   color: $color-black;
-  padding: $margin-medium;
+  padding: $space-medium;
 }
