--- a/src/assets/sass/elements/_form.scss
+++ b/src/assets/sass/elements/_form.scss
@@ -4,11 +4,11 @@ form {
 
 .form {
   &-error {
-    margin: $margin-small 0;
+    margin: $space-small 0;
     color: $color-white;
     background: $color-oldBrick;
     font-family: $title-font;
-    padding: $margin-small;
+    padding: $space-small;
     border-radius: 5px;
     @include font-size($small-font);
   }
