--- a/src/assets/sass/elements/_input.scss
+++ b/src/assets/sass/elements/_input.scss
@@ -2,8 +2,8 @@ input {
   display: block;
   border: none;
   border-left: 3px solid transparent;
-  padding: $margin-medium;
-  margin: $margin-small 0;
+  padding: $space-medium;
+  margin: $space-small 0;
   width: 100%;
   border-radius: 3px;
   color: $color-black;
