--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -24,5 +24,5 @@
       <div class="padding--lg"></div>
     </div>
   </div>
-  <app-snow-component></app-snow-component>
+  <app-snow-component *ngIf="home"></app-snow-component>
 </div>
