--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -1,5 +1,5 @@
-@import "../../assets/sass/variables";
-@import "../../assets/sass/mixins";
+@import "../../assets/sass/settings/settings";
+@import "../../assets/sass/tools/tools";
 
 .logo {
   line-height: 1.1;
