--- a/src/app/veratrak/veratrak.component.html
+++ b/src/app/veratrak/veratrak.component.html
@@ -6,7 +6,7 @@
       <h1>Veratrak - Branding and website</h1>
     </header>
 
-    <section>
+    <section class="section">
       <header>
         <h2>Who are Veratrak and what do they do?</h2>
       </header>
@@ -18,7 +18,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>How we helped them</h2>
       </header>
@@ -38,7 +38,7 @@
 
     <img src="assets/images/veratrak-logo-color.png" alt="Veratrak logo" class="veratrak-logo">
 
-    <section>
+    <section class="section">
       <header>
         <h2>Designing the logo</h2>
       </header>
@@ -64,7 +64,7 @@
       </blockquote>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>The website</h2>
       </header>
