--- a/src/app/what/what.component.scss
+++ b/src/app/what/what.component.scss
@@ -1,5 +1,5 @@
-@import "../../assets/sass/variables";
-@import "../../assets/sass/mixins";
+@import "../../assets/sass/settings/settings";
+@import "../../assets/sass/tools/tools";
 
 .what-we-do {
   &__tagline {
