--- a/src/assets/sass/objects/_lists.scss
+++ b/src/assets/sass/objects/_lists.scss
@@ -13,7 +13,7 @@
   &-inline {
     li {
       display: inline-block;
-      margin-left: 5px;
+      margin-left: $space-small;
 
       &:first-child { margin-left: 0; }
     }
