--- a/src/assets/sass/generic/_section.scss
+++ b/src/assets/sass/generic/_section.scss
@@ -1,3 +1,8 @@
 .section {
-  margin: 150px 0;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  @include md {
+    margin-top: 90px;
+    margin-bottom: 90px;
+  }
 }
