--- a/src/assets/sass/settings/_fonts.scss
+++ b/src/assets/sass/settings/_fonts.scss
@@ -1,6 +1,5 @@
 $body-font: -apple-system,system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$main-font: 'KG-SummerStorm';
-$title-font: $main-font, Arial, sans-serif;
+$title-font: 'KG-SummerStorm', Arial, sans-serif;
 $base-font: 16;
 $small-font: 14;
 $line-height-base: 1.5;
