--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,7 +11,7 @@
   padding: 5px;
 
   &__text {
-    font-family: $main-font;
+    font-family: $title-font;
     font-size: 24px;
     display: inline-block;
     margin-right: 10px;
