--- a/src/assets/sass/generic/_fonts.scss
+++ b/src/assets/sass/generic/_fonts.scss
@@ -1,7 +1,11 @@
 @font-face {
   font-family: 'KG-SummerStorm';
-  src: url('assets/fonts/kgsummerstormrough-webfont.woff2') format('woff2'),
-       url('assets/fonts/kgsummerstormrough-webfont.woff') format('woff');
+  src: url('assets/fonts/kgsummerstormrough-webfont.eot');
+  src: url('assets/fonts/kgsummerstormrough-webfont.eot?#iefix') format('embedded-opentype'),
+       url('assets/fonts/kgsummerstormrough-webfont.woff2') format('woff2'),
+       url('assets/fonts/kgsummerstormrough-webfont.woff') format('woff'),
+       url('assets/fonts/kgsummerstormrough-webfont.ttf') format('truetype'),
+       url('assets/fonts/kgsummerstormrough-webfont.svg#kg_summer_storm_roughregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
