--- a/src/app/boombocs/boombocs.component.html
+++ b/src/app/boombocs/boombocs.component.html
@@ -1,31 +1,33 @@
 <div class="container-fluid">
-  <img src="assets/images/boombocs-feature.jpg" alt="" class="img-fluid" data-aos="fade-up">
+  <img src="assets/images/boombocs-feature.jpg" alt="" class="img-fluid case-study__image" data-aos="fade-up">
+</div>
 
-  <section>
+<div class="case-study white-bg">
+  <section class="container-fluid">
     <header>
       <h1>Boombocs - Website Re-design/build</h1>
     </header>
 
-      <p>
-        BoomBocs produce high-end, quality speaker systems. A colourful, fun yet powerful and professional sounding device, which is looking to enter high-end retail stores this year. BoomBocs came to us looking to revamp their website and give it its own, distinct identity. We welcomed the challenge.
-      </p>
+    <p>
+      BoomBocs produce high-end, quality speaker systems. A colourful, fun yet powerful and professional sounding device, which is looking to enter high-end retail stores this year. BoomBocs came to us looking to revamp their website and give it its own, distinct identity. We welcomed the challenge.
+    </p>
 
-      <p>
-        We met with Jonny to discuss what the company were about, the people involved and the message they were looking to get across with the new design. Jonny was clear that it visually needed to look sleek and professional. Not gimmicky and needed to let the speakers provide the colour instead of the website content itself.
-      </p>
+    <p>
+      We met with Jonny to discuss what the company were about, the people involved and the message they were looking to get across with the new design. Jonny was clear that it visually needed to look sleek and professional. Not gimmicky and needed to let the speakers provide the colour instead of the website content itself.
+    </p>
 
-      <p>
-        It was also important that we made sure that we could get results given short deadlines. eCommerce sites are notoriously in-depth, with account pages, checkout journeys and product pages. We proposed the idea of highlighting key pages that we could give attention to and deliver those initially and launch sooner rather than later. This was agreed and the stage was set.
-      </p>
+    <p>
+      It was also important that we made sure that we could get results given short deadlines. eCommerce sites are notoriously in-depth, with account pages, checkout journeys and product pages. We proposed the idea of highlighting key pages that we could give attention to and deliver those initially and launch sooner rather than later. This was agreed and the stage was set.
+    </p>
 
-      <p>
-        From this initial meeting we were able to produce a moodboard of the sort of things we felt captured what we had discussed. It was also a useful tool to refer to when we came round to designing to help inspire us and move things forward efficiently.
-      </p>
+    <p>
+      From this initial meeting we were able to produce a moodboard of the sort of things we felt captured what we had discussed. It was also a useful tool to refer to when we came round to designing to help inspire us and move things forward efficiently.
+    </p>
 
-      <figure class="margin-bottom--lg text-center">
-        <img src="assets/images/boombocs-pinterest.jpg" data-aos="fade-up" alt="Boombocs moodboard" class="img-fluid">
-        <figcaption>Boombocs moodboard</figcaption>
-      </figure>
+    <figure class="margin-bottom--lg text-center">
+      <img src="assets/images/boombocs-pinterest.jpg" data-aos="fade-up" alt="Boombocs moodboard" class="img-fluid">
+      <figcaption>Boombocs moodboard</figcaption>
+    </figure>
 
     <section class="clearfix section">
       <header>
