--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="contact">
   <div class="container-fluid">
     <header>
       <h1>
@@ -6,7 +6,7 @@
           Got work?
         </div>
         <div data-aos="fade-up" data-aos-delay="100">
-          Or just here to say "Hi"?
+          Or just here to say "hey"?
         </div>
       </h1>
     </header>
@@ -92,7 +92,7 @@
         <div class="text-center">
           <span class="fa-stack fa-3x">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-gbp fa-stack-1x color-black"></i>
+            <i class="fa fa-gbp fa-stack-1x color-white"></i>
           </span>
         </div>
 
