--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="container">
       <blockquote class="text-center">
-        <q><span aria-hidden="true">🚀</span> You've made it to the bottom!</q>
-        <footer>- Jupiter and the Giraffe</footer>
+        <q>You've made it to the bottom!</q>
+        <footer>- Jupiter and the Giraffe <span aria-hidden="true">🚀</span></footer>
       </blockquote>
       <section>
         <header>
