--- a/src/app/northstar/northstar.component.html
+++ b/src/app/northstar/northstar.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
-  <img src="assets/images/northstar-feature.png" alt="" class="img-fluid">
+  <img src="assets/images/northstar-feature.png" alt="" class="img-fluid case-study__image">
+</div>
 
-  <section>
+<div class="case-study white-bg">
+  <section class="container-fluid">
     <header>
       <h1>North Star Law - Branding and Website Design/build</h1>
     </header>
