--- a/src/app/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.component.html
@@ -1,5 +1,6 @@
-<div class="container-fluid">
-  <section>
+
+<div class="white-bg">
+  <section class="container-fluid">
     <h1>Terms & Conditions</h1>
 
     <p>The following terms and conditions refer to Jupiter and the Giraffe ("The Agency") and its relationship with its clients and potential clients.</p>
