--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -1,32 +1,50 @@
-<div class="container-fluid">
-  <section class="what-we-do">
+<div class="what-we-do">
+  <section class="container-fluid">
     <header>
       <h1 class="sr-only">What we do</h1>
     </header>
 
-    <p class="what-we-do__tagline">
-      We'll help your company find its voice, establish its brand and build you a kick ass website.
-    </p>
-
-    <section class="section">
+    <section>
       <header>
-        <h2>Brand</h2>
+        <h2>Branding</h2>
       </header>
 
       <p>
-        Like you, we believe brand aesthetics are the most important thing and it all starts with your logo.
+        Like you, we believe brand aesthetics are the most important thing.
         Something engaging, unique and most importantly you!
-        A logo tells much about who you are in the shortest time so getting this right can make or break your business.
       </p>
 
       <p>
-        We’re all about sculpting your brand identity around your logo, combining wicked typography,
-        striking colours, tone of voice and brand strategy in an exciting, elegantly built design.
+        We work tirelessly with you to think about the "what's", "who's", "where's" and "when's"
+        when it comes to your audience to help sculpt the perfect brand combined with the perfect message.
+        We’re all about engaging your audience through a jaw-dropping logo, wicked typography,
+        striking colours and a resonating tone of voice along with a strategy that will stick.
         We're not messing around.
       </p>
 
       <p>
-        <a [routerLink]="['/contact']">Contact us</a> if your brand needs a fresh new pair of trainers
+        <a [routerLink]="['/contact']">Talk to us</a> if your brand needs a fresh new pair of trainers.
+      </p>
+    </section>
+
+    <section class="section">
+      <header>
+        <h2>Design</h2>
+      </header>
+
+      <p>
+        We've done websites, we've done apps. We've got what it takes to design you a website
+        that shines.
+      </p>
+
+      <p>
+        Extending from your brand, we take every aspect of who your users are and we'll
+        design you something that far exceeds what they expect. We'll expand what you thought was
+        possible and open your eyes to breath-taking design through composition, contrast, colour and experience.
+      </p>
+
+      <p>
+        <a [routerLink]="['/contact']">Let us know</a> so we can inspire you.
       </p>
     </section>
 
@@ -38,17 +56,21 @@
           You know your website must stand out.
           We’re here to take your brand and build an online experience that turns heads.
           We pride ourselves in writing clean, maintainable code on a platform you can trust using the latest technologies.
-          We’re confident we can build the site you need, using elegant user experience (UX),
-          optimising it for search engines (SEO) and making it accessible to all. We have your users in mind.
+          We’re confident we can build the site you need, using elegant user experience (UX) and making it accessible to all. We have your users in mind.
         </p>
 
         <p>
-          From our years of experience in the industry, using technologies such as React,
-          Angular and Vue or building brochure sites to complete eCommerce and Wordpress systems are a piece of cake
+          It's no good if you have the perfect website if knowbody knows about it. We build with search engines in mind
+          so you can be confident your users can easily find you.
         </p>
 
         <p>
-          Whatever your challenge, we'd love to talk to you about it so <a [routerLink]="['/contact']">contact us</a>!
+          We have years of experience in the industry, using technologies such as React,
+          Angular and Vue or building brochure sites to complete eCommerce and Wordpress systems or Shopify themes.
+        </p>
+
+        <p>
+          Whatever your challenge, we'd love to talk to you about it so <a [routerLink]="['/contact']">Give us a shout</a>!
         </p>
     </section>
   </section>
