--- a/src/assets/sass/settings/_colours.scss
+++ b/src/assets/sass/settings/_colours.scss
@@ -1,5 +1,5 @@
 $color-black: #333333;
-$color-white: #FFFFFF;
+$color-white: #e6e6e6;
 $color-vulcan: #0a0b13;
 $color-oldBrick: #942223;
 $color-malibu: #93ccf8;
