--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -1,8 +1,9 @@
 <div class="container-fluid">
+  <img src="assets/images/epoch-feature.jpg" alt="" class="img-fluid case-study__image" data-aos="fade-up">
+</div>
 
-  <img src="assets/images/epoch-feature.jpg" alt="" class="img-fluid" data-aos="fade-up">
-
-  <section class="case-study">
+<div class="case-study white-bg">
+  <section class="container-fluid">
     <header>
       <h1>EPOCH - Branding and website</h1>
       <strong>Launched: Oct 2018</strong>
@@ -224,6 +225,6 @@
     </section>
 
     <app-get-in-touch></app-get-in-touch>
-  </section>
+    </section>
 </div>
 
