--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,35 +2,38 @@
   <div class="container-fluid">
     <h1 class="sr-only">Jupiter and the Giraffe</h1>
 
-    <div class="row equal-heights home__about section">
-      <section class="col-sm home__about-who">
-        <header>
-          <h2>
-            <span data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</span>
-          </h2>
-        </header>
+    <p class="home__tagline">
+      We'll help your company find its voice, establish its brand and build you a kick-ass website.
+    </p>
 
-        <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
+    <section class="home__about-who section">
+      <header>
+        <h2>
+          <span data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</span>
+        </h2>
+      </header>
 
-        <a href="" [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
-      </section>
-      <section class="col-sm">
-        <header>
-          <h2>
-            <span data-aos="fade-up" style="display: inline-block;" data-aos-delay="100">What we <br>do</span>
-          </h2>
-        </header>
+      <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
 
-        <p>
-          We care about your brand as much as you do, we have experience in logo design and corporate identity. To finish
-          it off, we can build you a kickass website to go with it.
-        </p>
+      <a href="" [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
+    </section>
 
-        <a href="" [routerLink]="['/what-we-do']">
-          Read more
-        </a><app-dots-component></app-dots-component>
-      </section>
-    </div>
+    <section class="section">
+      <header>
+        <h2>
+          <span data-aos="fade-up" style="display: inline-block;" data-aos-delay="100">What we do</span>
+        </h2>
+      </header>
+
+      <p>
+        We care about your brand as much as you do, we have experience in logo design and corporate identity. To finish
+        it off, we can build you a kickass website to go with it.
+      </p>
+
+      <a href="" [routerLink]="['/what-we-do']">
+        Read more
+      </a><app-dots-component></app-dots-component>
+    </section>
 
     <app-friends-component></app-friends-component>
 
