--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,6 @@
 @import "../../assets/sass/tools/tools";
 
 .home {
-  transition: color 1s ease, background 1s ease;
   padding: 20px 0;
   background: $color-white;
   color: $color-black;
@@ -10,6 +9,17 @@
   .work {
     @include md {
       margin-top: 20px;
+    }
+  }
+
+  &__tagline {
+    @include font-size($heading-2-mobile);
+    font-style: italic;
+    margin: $space-large 0;
+
+    @include md {
+      @include font-size($heading-2);
+      margin: $space-xlrg 0;
     }
   }
 
