--- a/src/app/veratrak/veratrak.component.html
+++ b/src/app/veratrak/veratrak.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
-  <img src="assets/images/veratrak-feature.jpg" alt="" class="img-fluid">
+  <img src="assets/images/veratrak-feature.jpg" alt="" class="img-fluid case-study__image">
+</div>
 
-  <section>
+<div class="case-study white-bg">
+  <section class="container-fluid">
     <header>
       <h1>Veratrak - Branding and website</h1>
     </header>
