--- a/src/assets/sass/generic/_fonts.scss
+++ b/src/assets/sass/generic/_fonts.scss
@@ -1,22 +1,22 @@
 @font-face {
   font-family: 'KG-SummerStorm';
-  src: url('assets/fonts/kgsummerstormrough-webfont.eot');
-  src: url('assets/fonts/kgsummerstormrough-webfont.eot?#iefix') format('embedded-opentype'),
-       url('assets/fonts/kgsummerstormrough-webfont.woff2') format('woff2'),
-       url('assets/fonts/kgsummerstormrough-webfont.woff') format('woff'),
-       url('assets/fonts/kgsummerstormrough-webfont.ttf') format('truetype'),
-       url('assets/fonts/kgsummerstormrough-webfont.svg#kg_summer_storm_roughregular') format('svg');
+  src: url('../fonts/kgsummerstormrough-webfont.eot');
+  src: url('../fonts/kgsummerstormrough-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/kgsummerstormrough-webfont.woff2') format('woff2'),
+       url('../fonts/kgsummerstormrough-webfont.woff') format('woff'),
+       url('../fonts/kgsummerstormrough-webfont.ttf') format('truetype'),
+       url('../fonts/kgsummerstormrough-webfont.svg#kg_summer_storm_roughregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('assets/fonts/icomoon.eot?54qe1w');
-  src:  url('assets/fonts/icomoon.eot?54qe1w#iefix') format('embedded-opentype'),
-        url('assets/fonts/icomoon.ttf?54qe1w') format('truetype'),
-        url('assets/fonts/icomoon.woff?54qe1w') format('woff'),
-        url('assets/fonts/icomoon.svg?54qe1w#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?54qe1w');
+  src:  url('../fonts/icomoon.eot?54qe1w#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?54qe1w') format('truetype'),
+        url('../fonts/icomoon.woff?54qe1w') format('woff'),
+        url('../fonts/icomoon.svg?54qe1w#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,12 +24,12 @@
 
 @font-face {
   font-family: 'fontawesome';
-  src:  url('assets/fonts/fontawesome-webfont.eot');
-  src:  url('assets/fonts/fontawesome-webfont.eot#iefix') format('embedded-opentype'),
-        url('assets/fonts/fontawesome-webfont.ttf') format('truetype'),
-        url('assets/fonts/fontawesome-webfont.woff2') format('woff2'),
-        url('assets/fonts/fontawesome-webfont.woff') format('woff'),
-        url('assets/fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+  src:  url('../fonts/fontawesome-webfont.eot');
+  src:  url('../fonts/fontawesome-webfont.eot#iefix') format('embedded-opentype'),
+        url('../fonts/fontawesome-webfont.ttf') format('truetype'),
+        url('../fonts/fontawesome-webfont.woff2') format('woff2'),
+        url('../fonts/fontawesome-webfont.woff') format('woff'),
+        url('../fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
