--- a/src/assets/sass/objects/_white-bg.scss
+++ b/src/assets/sass/objects/_white-bg.scss
@@ -1,7 +1,4 @@
-@import "../../assets/sass/settings/settings";
-@import "../../assets/sass/tools/tools";
-
-.what-we-do {
+.white-bg {
   padding: 20px 0;
   background: $color-white;
   color: $color-black;
