--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -22,7 +22,7 @@
     </p>
 
     <div class="row who__images">
-      <div class="col">
+      <div class="col who__image">
         <div class="media">
           <div class="media-left">
             <img class="media-object" [src]="'assets/images/founder.jpg'" alt="" [srcset]="'assets/images/founder.jpg 1x, assets/images/founder@2x.jpg 2x'">
@@ -34,7 +34,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col who__image">
         <div class="media">
           <div class="media-right">
             <img class="media-object" [src]="'assets/images/suzie.jpg'" alt="" [srcset]="'assets/images/suzie.jpg 1x, assets/images/suzie@2x.jpg 2x'">
