--- a/src/app/who/who.component.scss
+++ b/src/app/who/who.component.scss
@@ -1,8 +1,14 @@
 @import "../../assets/sass/settings/settings";
+@import "../../assets/sass/tools/tools";
 
 .who {
-  &__images {
-    margin-top: $space-xlrg;
-    margin-bottom: $space-xlrg;
+  &__image {
+    margin-top: $space-large;
+    margin-bottom: $space-large;
+
+    @include md {
+      margin-top: $space-xlrg;
+      margin-bottom: $space-xlrg;
+    }
   }
 }
