colour on northstar

--- a/src/app/northstar/northstar.component.html
+++ b/src/app/northstar/northstar.component.html
@@ -54,7 +54,7 @@
       </p>
 
       <figure class="text-center">
-        <img src="assets/images/northstar-colour.png" alt="colour pallet of grey, white, blue, gold and brown" class="img-fluid image">
+        <img src="assets/images/northstar-colour.png" alt="colour pallet of grey, white, blue, gold and brown" class="img-fluid">
         <figcaption>Colour pallete proposed to North Star</figcaption>
       </figure>
 
