--- a/src/app/boombocs/boombocs.component.html
+++ b/src/app/boombocs/boombocs.component.html
@@ -1,8 +1,6 @@
-<div class="container-fluid">
-  <img src="assets/images/boombocs-feature.jpg" alt="" class="img-fluid case-study__image" data-aos="fade-up">
-</div>
-
 <div class="case-study white-bg">
+  <img src="assets/images/boombocs-feature.jpg" alt="" class="img-fluid case-study__image">
+
   <section class="container-fluid">
     <header>
       <h1>Boombocs - Website Re-design/build</h1>
