--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -36,6 +36,10 @@
     }
   }
 
+  &__blog-title {
+    height: 50px;
+  }
+
   &__blog-info {
     margin-bottom: $space-medium;
     margin-top: $space-medium;
