homepage title height

--- a/src/app/home/friends/friends.component.html
+++ b/src/app/home/friends/friends.component.html
@@ -1,7 +1,7 @@
 <section class="section friends">
   <header>
     <h2>
-      <span data-aos="fade-up">Our best <br>friends!</span>
+      <span data-aos="fade-up">Our best <span class="friends__title-break">friends!</span></span>
     </h2>
   </header>
   <p>
