--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
     <section class="home__about-who section">
       <header>
         <h2>
-          <span data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</span>
+          <span data-aos="fade-up">Who are Jupiter <span class="home__title-break">and the Giraffe?</span></span>
         </h2>
       </header>
 
