other styling updates

--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -11,12 +11,17 @@
 
       <p>
         Like you, we believe brand aesthetics are the most important thing.
-        Something engaging, unique and most importantly you!
+      </p>
+
+      <p>
+        You need something engaging, unique and most importantly you! Investing in your brand will get results by building
+        confidence in your customers with an easily recognisable and relatable aesthetic. We want to give you something
+        that will scale and grow along with your company's ambitions and ultimate success.
       </p>
 
       <p>
         We work tirelessly with you to think about the "what's", "who's", "where's" and "when's"
-        when it comes to your audience to help sculpt the perfect brand combined with the perfect message.
+        when it comes to your audience to help sculpt the perfect brand.
         We’re all about engaging your audience through a jaw-dropping logo, wicked typography,
         striking colours and a resonating tone of voice along with a strategy that will stick.
         We're not messing around.
