--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -11,7 +11,7 @@
     <p>
       Unashamedly bold and not afraid to be weird,
       it's crucial that our portfolio demonstrations that we are as professional as we are kooky and we take our work very seriously.
-      We take pride in our ressiliant attention to detail,
+      We take pride in our resilient attention to detail,
       our commitment to the brands and people we work with and focus on making sure everything we do is the best that it can be.
     </p>
 
@@ -22,27 +22,27 @@
     </p>
 
     <div class="row who__images">
-      <div class="col who__image">
+      <div class="col who__image" itemscope itemtype="http://schema.org/Person">
         <div class="media">
           <div class="media-left">
-            <img class="media-object" [src]="'assets/images/founder.jpg'" alt="" [srcset]="'assets/images/founder.jpg 1x, assets/images/founder@2x.jpg 2x'">
+            <img itemprop="image" class="media-object" [src]="'assets/images/founder.jpg'" alt="Photo of Samuel Gregory" [srcset]="'assets/images/founder.jpg 1x, assets/images/founder@2x.jpg 2x'">
           </div>
           <div class="media-body media-bottom">
-            <h3 class="media-heading">Samuel Gregory</h3>
-            - Founder <br>
-            <a href="mailto:samuel@jupiterandthegiraffe.com">samuel@jupiterandthegiraffe.com</a>
+            <h3 class="media-heading" itemprop="name">Samuel Gregory</h3>
+            <span itemprop="jobTitle">- Founder</span> <br>
+            <a href="mailto:samuel@jupiterandthegiraffe.com" itemprop="email">samuel@jupiterandthegiraffe.com</a>
           </div>
         </div>
       </div>
-      <div class="col who__image">
+      <div class="col who__image" itemscope itemtype="http://schema.org/Person">
         <div class="media">
           <div class="media-right">
-            <img class="media-object" [src]="'assets/images/suzie.jpg'" alt="" [srcset]="'assets/images/suzie.jpg 1x, assets/images/suzie@2x.jpg 2x'">
+            <img class="media-object" [src]="'assets/images/suzie.jpg'" alt="Photo of Suzannah James" [srcset]="'assets/images/suzie.jpg 1x, assets/images/suzie@2x.jpg 2x'">
           </div>
           <div class="media-body media-bottom">
-            <h3 class="media-heading">Suzannah James</h3>
-            - Creative Director <br>
-            <a href="mailto:suzannah@jupiterandthegiraffe.com">suzannah@jupiterandthegiraffe.com</a>
+            <h3 class="media-heading" itemprop="name">Suzannah James</h3>
+            <span itemprop="jobTitle">- Creative Director</span> <br>
+            <a href="mailto:suzannah@jupiterandthegiraffe.com" itemprop="email">suzannah@jupiterandthegiraffe.com</a>
           </div>
         </div>
       </div>
