add company information

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -98,5 +98,15 @@
         For more details on Google Analytics please visit <a href="http://www.google.com/analytics/">their website</a>.
       </p>
     </section>
+
+    <section>
+      <h2>Company Information</h2>
+
+      <strong>Jupiter and the Giraffe Ltd, registered office:</strong>
+
+      <address>Wis Accountancy Ltd, 4, Imperial Place, Maxwell Road, Borehamwood, England, WD6 1JN </address>
+
+      <strong>Registration number: 11769481</strong>
+    </section>
   </section>
 </div>
